--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
   <h1>Polls Rethinked</h1>
   <p class="lead text-muted">Powered By Blockchain</p>
 </section>
+
+<app-poll-create></app-poll-create>
 <div class="d-flex">
   <div class="container poll-list">List</div>
   <div class="container poll-detail">Detail</div>
