--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand mr-auto" href="#">Blockchain Polls</a>
-  <button type="button" class="btn btn-secondary">Create Poll</button>
+  <button type="button" class="btn btn-secondary" (click)="showForm = !showForm">Create Poll</button>
 </nav>
 
 <section class="jumbotron bg-light text-center">
@@ -8,7 +8,7 @@
   <p class="lead text-muted">Powered By Blockchain</p>
 </section>
 
-<app-poll-create></app-poll-create>
+<app-poll-create *ngIf="showForm"></app-poll-create>
 <div class="d-flex">
   <div class="container poll-list">List</div>
   <div class="container poll-detail">Detail</div>
