--- a/src/app/poll-create/poll-create.component.html
+++ b/src/app/poll-create/poll-create.component.html
@@ -1,8 +1,9 @@
-<form class="container col-sm-4">
+<form [formGroup]="pollForm" (ngSubmit)="submitForm()" class="container col-sm-4">
   <div class="form-group row">
     <label class="col-sm-2 col-form-label col-form-label-sm"> Question: </label>
     <div class="col-sm-8">
       <input
+        formControlName="question"
         type="text"
         class="form-control form-control-sm"
         placeholder="Poll question"
@@ -14,6 +15,7 @@
     <label class="col-sm-2 col-form-label col-form-label-sm"> Image: </label>
     <div class="col-sm-8">
       <input
+        formControlName="image"
         type="text"
         class="form-control form-control-sm"
         placeholder="Url to image"
@@ -24,6 +26,7 @@
     <label class="col-sm-2 col-form-label col-form-label-sm"> Options: </label>
     <div class="col-sm-8">
       <input
+        formControlName="opt1"
         type="text"
         class="form-control form-control-sm"
         placeholder="Option 1"
@@ -34,6 +37,7 @@
     <label class="col-sm-2 col-form-label col-form-label-sm"></label>
     <div class="col-sm-8">
       <input
+        formControlName="opt2"
         type="text"
         class="form-control form-control-sm"
         placeholder="Option 2"
@@ -44,6 +48,7 @@
     <label class="col-sm-2 col-form-label col-form-label-sm"></label>
     <div class="col-sm-8">
       <input
+        formControlName="opt3"
         type="text"
         class="form-control form-control-sm"
         placeholder="Option 3"
@@ -52,6 +57,6 @@
   </div>
 
   <div class="d-flex justify-content-center">
-      <button type="submit" class="btn btn-sm btn-secondary">Submit poll</button>
+    <button type="submit" class="btn btn-sm btn-secondary">Submit poll</button>
   </div>
 </form>
