--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
         [pollImage]="poll.image"
       ></app-poll>
     </div>
-    <div class="container poll-detail">Detail</div>
+    <div class="container poll-detail"><app-poll-vote></app-poll-vote></div>
   </div>
 </div>
