--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,11 +15,11 @@
     <p class="lead text-muted">Powered By Blockchain</p>
   </section>
 
-  <app-poll-create *ngIf="showForm"></app-poll-create>
+  <app-poll-create *ngIf="showForm" (pollCreated)="handlePollCreate($event)"></app-poll-create>
   <div class="d-flex">
     <div class="container poll-list">
       <app-poll
-        *ngFor="let poll of polls"
+        *ngFor="let poll of polls | async"
         [question]="poll.question"
         [voted]="poll.voted"
         [votes]="poll.results"
@@ -30,10 +30,12 @@
     <div class="container poll-detail">
       <app-poll-vote
         *ngIf="activePoll"
+        [id]="activePoll.id"
         [voted]="activePoll.voted"
         [question]="activePoll.question"
         [options]="activePoll.options"
         [results]="activePoll.results"
+        (pollVoted)="handlePollVoted($event)"
       ></app-poll-vote>
     </div>
   </div>
